Attempt 1 at fixing Chrome on Android misalignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -333,6 +333,9 @@ input {
         font-size: 16px;
         max-width: $logo_width_640px;
     }
+    .signup > * {
+        display: block;
+    }
     $input-width-640px: 378px;
     input[type="text"],
     input[type="email"] {
